# quadruped-robotics-stack

./: .gitignore  README.md  requirements.txt
ros2/quad_sdk/global_body_planner/: CMakeLists.txt  README.md  package.xml  setup_deps.sh
ros2/quad_sdk/global_body_planner/config/: global_body_planner.yaml  global_body_planner_topics.yaml
ros2/quad_sdk/global_body_planner/include/global_body_planner/: gbpl.hpp  global_body_plan.hpp  global_body_planner.hpp  global_body_planner_test_fixture.hpp  graph_class.hpp  planner_class.hpp  planning_utils.hpp  rrt.hpp
ros2/quad_sdk/global_body_planner/log/: latest_list
ros2/quad_sdk/global_body_planner/src/: gbpl.cpp  global_body_plan.cpp  global_body_planner.cpp  global_body_planner_node.cpp  graph_class.cpp  planner_class.cpp  planning_utils.cpp  rrt.cpp
ros2/quad_sdk/local_planner/: CMakeLists.txt  README.md  package.xml
ros2/quad_sdk/local_planner/config/: local_planner.yaml  local_planner_topics.yaml
ros2/quad_sdk/local_planner/include/local_planner/: local_footstep_planner.hpp  local_planner.hpp
ros2/quad_sdk/local_planner/log/: latest_list
ros2/quad_sdk/local_planner/src/: local_footstep_planner.cpp  local_planner.cpp  local_planner_node.cpp
ros2/quad_sdk/nmpc_controller/: CMakeLists.txt  README.md  package.xml
ros2/quad_sdk/nmpc_controller/config/: nmpc_controller.yaml
ros2/quad_sdk/nmpc_controller/include/nmpc_controller/: nmpc_controller.hpp  quad_nlp.hpp
ros2/quad_sdk/nmpc_controller/log/: latest_list
ros2/quad_sdk/nmpc_controller/scripts/: dynamicsModel.m  main.asv  main.m
ros2/quad_sdk/nmpc_controller/scripts/generated_codes/matlab/: legDynamics.m
ros2/quad_sdk/nmpc_controller/src/: adaptive_complexity_utils.cpp  nmpc_controller.cpp  quad_nlp.cpp  quad_nlp_utils.cpp
ros2/quad_sdk/quad_simulator/gazebo_plugins/: CMakeLists.txt  controller_plugin.xml  package.xml
ros2/quad_sdk/quad_simulator/gazebo_plugins/src/: controller_plugin.cpp  estimator_plugin.cpp  quad_sim_effort_controller_plugin.cpp  quad_wheel_controller_plugin.cpp  quad_wheel_estimator_plugin.cpp  spawn_lock_plugin.cpp
ros2/quad_sdk/quad_simulator/gazebo_scripts/: CMakeLists.txt  package.xml
ros2/quad_sdk/quad_simulator/gazebo_scripts/src/: contact_state_publisher.cpp  contact_state_publisher_node.cpp
ros2/quad_sdk/quad_simulator/quad_sim_scripts/: CMakeLists.txt  package.xml
ros2/quad_sdk/quad_simulator/quad_sim_scripts/config/: default.rviz  quad_control.yaml  quad_wheel_control.yaml
ros2/quad_sdk/quad_simulator/quad_sim_scripts/worlds/: big_flat.sdf  big_flat.xml.xacro  flat.sdf  flat.xml.xacro  gap_20cm.sdf  gap_20cm.xml.xacro  gap_40cm.sdf  gap_40cm.xml.xacro  gap_40cm_local_min.sdf  gap_40cm_local_min.xml.xacro  gap_80cm.sdf  gap_80cm.xml.xacro  parkour_local_min.sdf  parkour_local_min.xml.xacro  rough_25cm.sdf  rough_25cm.xml.xacro  rough_40cm_huge.sdf  rough_40cm_huge.xml.xacro  slope_20.sdf  slope_20.xml.xacro  slope_20_hole.sdf  slope_20_hole.xml.xacro  step_10cm.sdf  step_10cm.xml.xacro  step_10cm_local_min.sdf  step_10cm_local_min.xml.xacro  step_15cm_local_min.sdf  step_15cm_local_min.xml.xacro  step_20cm.sdf  step_20cm.xml.xacro  step_25cm.sdf  step_25cm.xml.xacro  step_30cm.sdf  step_30cm.xml.xacro
ros2/quad_sdk/quad_utils/: CMakeLists.txt  README.md  package.xml  setup_deps.sh
ros2/quad_sdk/quad_utils/config/: SIM_TO_REAL_DEBUG.md  a1.yaml  a2.yaml  b2.yaml  filter_chain.yaml  go1.yaml  go2.yaml  go2w.yaml  joy_config.yaml  remote_heartbeat.yaml  ros_gz_bridge.yaml  rviz_visualization.yaml  spirit.yaml  spot.yaml  topics_robot.yaml  trajectory_publisher.yaml  vision60.yaml
ros2/quad_sdk/quad_utils/include/quad_utils/: fast_terrain_map.hpp  filters_demo.hpp  math_utils.hpp  matrix_utils.hpp  mesh_to_grid_map_converter.hpp  mjcf_to_grid_map_converter.hpp  quad_kd.hpp  quad_kd2.hpp  remote_heartbeat.hpp  ros_utils.hpp  rviz_interface.hpp  trajectory_publisher.hpp
ros2/quad_sdk/quad_utils/launch/: force_app_single.py  force_applicator.py  logging.py  logging_cbs.py  mapping.py  mocap.py  mujoco_mapping.py  mujoco_profiles.py  mujoco_urdf_utils.py  multi_robot.py  planning.py  quad_gazebo.py  quad_isaac_bringup.py  quad_isaac_planning.py  quad_mujoco.py  quad_mujoco_bringup.py  quad_multi_gazebo.py  quad_plan.py  quad_visualization.py  remote_driver.py  robot_bringup.py  robot_driver.py  spawn_obstacles.py  testing.py  visualization_plugins.py
ros2/quad_sdk/quad_utils/rviz/: quad_viewer.rviz
ros2/quad_sdk/quad_utils/scripts/: cyclone_dds_remote.xml  cyclone_dds_robot.xml  debug_tf.sh  init_remote.sh  init_robot.sh  launch_remote_env.sh  launch_robot_env.sh
ros2/quad_sdk/quad_utils/src/: fast_terrain_map.cpp  filters_demo.cpp  filters_demo_node.cpp  math_utils.cpp  mesh_to_grid_map_converter.cpp  mesh_to_grid_map_node.cpp  mjcf_to_grid_map_converter.cpp  mjcf_to_grid_map_node.cpp  mujoco_recorder_node.cpp  quad_kd.cpp  quad_kd2.cpp  remote_heartbeat.cpp  remote_heartbeat_node.cpp  ros_utils.cpp  rviz_interface.cpp  rviz_interface_node.cpp  trajectory_publisher.cpp  trajectory_publisher_node.cpp
ros2/quad_sdk/quad_utils/test/: test_main.cpp  test_math_utils.cpp  test_quad_kd.cpp  test_rviz_interface.cpp  test_terrain_map_publisher.cpp
ros2/quad_sdk/robot_driver/: CMakeLists.txt  README.md  package.xml
ros2/quad_sdk/robot_driver/config/: robot_driver.yaml  robot_driver_topics.yaml
ros2/quad_sdk/robot_driver/include/robot_driver/: robot_driver.hpp  robot_driver_utils.hpp
ros2/quad_sdk/robot_driver/src/: robot_driver.cpp  robot_driver_node.cpp  robot_driver_utils.cpp
ros2/quad_sdk/robot_driver/src/controllers/: grf_pid_controller.cpp  inertia_estimation_controller.cpp  inverse_dynamics_controller.cpp  joint_controller.cpp  learned_policy.cpp  leg_controller.cpp  underbrush_inverse_dynamics.cpp
ros2/quad_sdk/robot_driver/src/estimators/: comp_filter_estimator.cpp  ekf_estimator.cpp  state_estimator.cpp
ros2/quad_sdk/robot_driver/src/hardware_interfaces/: hardware_interface.cpp  spirit_interface.cpp  unitree_interface.cpp
ros2/quad_sdk/robot_driver/test/: test_robot_driver.cpp
(+148 files in other folders)
