cmake_minimum_required(VERSION 3.8)
project(global_body_planner)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(quad_msgs REQUIRED)
find_package(quad_utils REQUIRED)
find_package(grid_map_core REQUIRED)
find_package(grid_map_ros REQUIRED)
find_package(pinocchio REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

set(MY_LIB_SOURCES
  src/global_body_planner.cpp
  src/planning_utils.cpp
  src/global_body_plan.cpp
  src/graph_class.cpp
  src/planner_class.cpp
  src/rrt.cpp
  src/gbpl.cpp
)

# Create library
add_library(${PROJECT_NAME} ${MY_LIB_SOURCES})
# quad_utils transitively needs pinocchio (for ros_utils.hpp/quad_kd2.hpp),
# but ament_target_dependencies() only carries quad_utils's legacy
# INCLUDE_DIRS/LIBRARIES, not pinocchio's INTERFACE_COMPILE_DEFINITIONS
# (e.g. BOOST_MPL_LIMIT_LIST_SIZE=30, needed since Pinocchio's joint-type
# variant now exceeds Boost's default 20-type mpl::list limit). Link the
# modern imported target directly so those propagate correctly.
target_link_libraries(${PROJECT_NAME} pinocchio::pinocchio)
ament_target_dependencies(${PROJECT_NAME}
  rclcpp
  std_msgs
  grid_map_core
  grid_map_ros
  quad_msgs
  quad_utils
)
add_executable(${PROJECT_NAME}_node src/global_body_planner_node.cpp)
target_link_libraries(${PROJECT_NAME}_node ${PROJECT_NAME})
ament_target_dependencies(${PROJECT_NAME}_node
  rclcpp
  std_msgs
  grid_map_core
  grid_map_ros
  quad_msgs
  quad_utils
)
target_include_directories(${PROJECT_NAME}
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_include_directories(${PROJECT_NAME}_node
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

install(
  TARGETS ${PROJECT_NAME}_node
  DESTINATION lib/${PROJECT_NAME}
)

install(
  TARGETS ${PROJECT_NAME}
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
)

install(
  DIRECTORY config/
  DESTINATION share/${PROJECT_NAME}/config
)

install(
  DIRECTORY include/
  DESTINATION include
)

ament_export_include_directories(include)
ament_export_libraries(${PROJECT_NAME})
ament_export_dependencies(
  rclcpp
  std_msgs
  grid_map_core
  grid_map_ros
  quad_msgs
  quad_utils
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  # set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  set(ament_cmake_uncrustify_FOUND TRUE)
  # ament_lint_auto_find_test_dependencies()
endif()

ament_package()
