<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>global_body_planner</name>
  <version>0.0.0</version>
  <description>The Global Body Planner Package</description>
  <maintainer email="ologandavid@gmail.com">rml</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>quad_msgs</depend>
  <depend>quad_utils</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
