<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nmpc_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ologandavid@gmail.com">rml</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>quad_msgs</depend>
  <depend>quad_utils</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <depend>eigen</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
